grammar.js
const ci = (word) => new RegExp(word.split('').map((c) => /[a-zA-Z]/.test(c) ? `[${c.toLowerCase()}${c.toUpperCase()}]` : c).join(''));
const kw = (word) => token(prec(10, ci(word)));

export default grammar({
  name: 'batch',
  extras: () => [/[ \t]/],
  word: ($) => $.command_name,
  rules: {
    program: ($) => repeat(choice(seq($._stmt, /\r?\n/), /\r?\n/)),
    _stmt: ($) => choice(
      $.echo_off, $.comment, $.label, $.variable_assignment,
      $.if_stmt, $.goto_stmt, $.call_stmt, $.exit_stmt,
      $.setlocal_stmt, $.endlocal_stmt, $.for_stmt,
      $.redirect_stmt, $.pipe_stmt, $.cond_exec,
      $.parenthesized, $.cmd,
    ),
    echo_off: () => prec(10, seq('@', kw('echo'), choice(kw('off'), kw('on')))),
    comment: () => token(prec(10, choice(
      seq(optional('@'), /[rR][eE][mM]/, optional(seq(/[ \t]/, /[^\r\n]*/))),
      seq('::', /[^\r\n]*/),
    ))),
    label: () => token(seq(':', /[a-zA-Z_][a-zA-Z0-9_-]*/)),
    variable_assignment: ($) => prec(8, seq(
      optional('@'), $.set_keyword,
      choice(
        $.arithmetic_assignment,
        $.prompt_assignment,
        seq('"', $.assignment_variable, "=", optional(choice($.integer, $.quoted_assignment_string)), '"'),
        seq($.assignment_variable, "=", optional(choice($.integer, $.assignment_string))),
      ),
    )),
    // SET /A — evaluates a numeric expression; e.g. `set /a result=5` or `set /a "x=y+1"`
    arithmetic_assignment: ($) => seq(
      token(prec(10, ci('/a'))),
      $.arithmetic_expression,
    ),
    // SET /P — displays a prompt and reads user input; e.g. `set /p answer=Enter value:`
    prompt_assignment: ($) => seq(
      token(prec(10, ci('/p'))),
      $.assignment_variable, '=', optional($.assignment_string),
    ),
    // The full arithmetic expression text (operators, variable names, literals, hex/octal numbers).
    // Handles both quoted (`"x=y+1"`) and unquoted (`result=5`) forms as a single atomic token.
    arithmetic_expression: () => token(choice(
      seq('"', /[^"\r\n]*/, '"'),
      /[^\r\n"]+/,
    )),
    set_keyword: () => kw("set"),
    assignment_variable: () => /[a-zA-Z_][a-zA-Z0-9_]*/,
    assignment_string: ($) => prec.right(repeat1(choice(
      $.variable_reference,
      $._assignment_string_literal,
    ))),
    _assignment_string_literal: () => /[^%!\r\n]+/,
    quoted_assignment_string: ($) => prec.right(repeat1(choice(
      $.variable_reference,
      $._quoted_assignment_string_literal,
    ))),
    _quoted_assignment_string_literal: () => /[^%!"\r\n]+/,
    if_stmt: ($) => prec.right(8, seq(
      optional('@'), kw('if'),
      optional(kw('not')),
      choice(
        seq(kw('exist'), choice($.string, $.variable_reference)),
        seq(kw('defined'), /[a-zA-Z_][a-zA-Z0-9_]*/),
        seq(kw('errorlevel'), $.integer),
        seq(
          choice($.string, $.variable_reference, $.integer),
          $.comparison_op,
          choice($.string, $.variable_reference, $.integer),
        ),
      ),
      choice(
        // Parenthesized form: supports else clause
        seq($.parenthesized, optional($.else_clause)),
        // Inline command form: no else (ambiguous)
        $.cmd,
      ),
    )),
    else_clause: ($) => prec.right(8, seq(
      kw('else'),
      choice($.parenthesized, $.cmd),
    )),
    comparison_op: () => token(prec(10, choice('==', ci('equ'), ci('neq'), ci('lss'), ci('leq'), ci('gtr'), ci('geq')))),
    goto_stmt: () => prec(8, seq(
      optional('@'), kw('goto'),
      choice(token(prec(10, ci(':eof'))), token(seq(optional(':'), /[a-zA-Z_][a-zA-Z0-9_-]*/))),
    )),
    call_stmt: ($) => prec(8, seq(
      optional('@'), kw('call'),
      choice(token(seq(':', /[a-zA-Z_][a-zA-Z0-9_-]*/)), $.command_name),
      optional($.argument_list),
    )),
    exit_stmt: ($) => prec(8, seq(
      optional('@'), kw('exit'),
      optional(choice(
        seq(kw('/b'), choice($.integer, $.variable_reference)),
        kw('/b'),
        $.integer,
      )),
    )),
    setlocal_stmt: () => prec(8, seq(
      optional('@'), kw('setlocal'),
      optional(choice(kw('enabledelayedexpansion'), kw('disabledelayedexpansion'), kw('enableextensions'), kw('disableextensions'))),
    )),
    endlocal_stmt: () => prec(8, seq(optional('@'), kw('endlocal'))),
    for_stmt: ($) => prec(8, seq(
      optional('@'), kw('for'),
      optional($.for_options), $.for_variable,
      kw('in'), '(', optional($.for_set), ')', kw('do'),
      choice($.parenthesized, $.cmd),
    )),
    for_options: () => token(prec(10, choice(ci('/d'), seq(ci('/r'), optional(seq(/[ \t]+/, /[^\s]+/))), ci('/l'), seq(ci('/f'), optional(seq(/[ \t]+/, '"', /[^"]*/, '"')))))),
    for_variable: () => token(seq('%%', optional('~'), /[a-zA-Z]/)),
    for_set: () => /[^)\r\n]+/,
    parenthesized: ($) => seq('(', repeat(choice(seq($._stmt, /\r?\n/), /\r?\n/)), ')'),
    redirect_stmt: ($) => prec.right(4, seq(choice($.cmd, $.parenthesized), $.redirection)),
    redirection: ($) => prec.right(seq(
      optional(/[0-2]/), $.redirect_op, $.redirect_target,
      optional(seq(optional(/[0-2]/), $.redirect_op, $.redirect_target)),
    )),
    redirect_op: () => token(choice('2>&1', '>&1', '2>>', '2>', '>>', '>', '<')),
    redirect_target: () => token(choice(ci('nul'), ci('con'), /[^\s|&><\r\n]+/)),
    pipe_stmt: ($) => prec.left(3, seq(choice($.cmd, $.parenthesized), '|', choice($.cmd, $.parenthesized))),
    cond_exec: ($) => choice(
      prec.left(2, seq(choice($.cmd, $.parenthesized), '&&', choice($.cmd, $.parenthesized))),
      prec.left(1, seq(choice($.cmd, $.parenthesized), '||', choice($.cmd, $.parenthesized))),
    ),
    variable_reference: () => token(choice(
      seq('%', /[a-zA-Z_][a-zA-Z0-9_()\[\]]*/, '%'),
      seq('%~', /[a-zA-Z]*/, /[0-9]/),
      seq('%', /[0-9]/),
      seq('%%', optional('~'), /[a-zA-Z]/),
      seq('!', /[a-zA-Z_][a-zA-Z0-9_]*/, '!'),
      seq('%', /[a-zA-Z_][a-zA-Z0-9_()\[\]]*/, ':', /[^%]+/, '%'),
    )),
    string: () => token(seq('"', /[^"\r\n]*/, '"')),
    cmd: ($) => prec.right(5, seq(optional('@'), $.command_name, optional($.argument_list))),
    command_name: () => /[a-zA-Z_][a-zA-Z0-9_.-]*/,
    argument_list: ($) => prec.right(repeat1($._arg)),
    _arg: ($) => choice($.string, $.variable_reference, $.command_option, $.argument_value),
    command_option: () => token(seq('/', /[a-zA-Z_?][a-zA-Z0-9_:]*/)),
    argument_value: () => /[^\s|&><"\r\n%!][^\s|&><"\r\n]*/,
    integer: () => /[0-9]+/,
  },
});
