test/corpus/for_loops.txt
================
FOR basic
================

for %%i in (*.txt) do echo %%i

---

(program
  (for_stmt
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR with variable reference in set
================

for %%a in (%gimp_loc%) do echo %%a

---

(program
  (for_stmt
    (for_variable)
    (for_set
      (variable_reference))
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR with multiple variable references in set
================

for %%a in (%path_a% %path_b%) do echo %%a

---

(program
  (for_stmt
    (for_variable)
    (for_set
      (variable_reference)
      (variable_reference))
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR with delayed expansion variable in set
================

for %%a in (!my_list!) do echo %%a

---

(program
  (for_stmt
    (for_variable)
    (for_set
      (variable_reference))
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /L numeric
================

for /l %%i in (1,1,10) do echo %%i

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /F file parsing
================

for /f "tokens=1,2 delims=," %%a in (data.csv) do echo %%a

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))
