test/corpus/variables.txt
================
SET simple variable
================

set MY_VAR=hello

---

(program
  (variable_assignment
    (set_keyword)
    (assignment_variable)
    (assignment_string)))

================
SET quoted variable
================

set "MY_VAR=hello world"

---

(program
  (variable_assignment
    (set_keyword)
    (assignment_variable)
    (assignment_string)))

================
SET /a arithmetic
================

set /a result=5

---

(program
  (variable_assignment
    (set_keyword)
    (assignment_variable)
    (assignment_string)))

================
SET /p prompt
================

set /p answer=Enter value:

---

(program
  (variable_assignment
    (set_keyword)
    (assignment_variable)
    (assignment_string)))
